buildscript {
    ext {
        springBootVersion = '3.2.1'
        springDependencyManagementVersion = '1.0.15.RELEASE'
        lombokVersion = '8.6'
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
        classpath "io.spring.gradle:dependency-management-plugin:${springDependencyManagementVersion}"
        classpath("io.freefair.gradle:lombok-plugin:${lombokVersion}")
    }
}

allprojects {
    group 'com.jovialcode'
    version '0.0.1-SNAPSHOT'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.freefair.lombok'

    sourceCompatibility = 18

    repositories {
        google()
        mavenCentral()
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies{
        annotationProcessor 'org.projectlombok:lombok'
        compileOnly 'org.projectlombok:lombok'

        //For Mapping Json
        implementation 'com.google.code.gson:gson:2.10'
        implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'

        //For Functional Coding
        implementation 'io.vavr:vavr:0.10.4'
    }

    test {
        jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
    }
}
